[gd_scene load_steps=31 format=2]

[ext_resource path="res://scene/start/start.gd" type="Script" id=1]
[ext_resource path="res://tscn/ui/button/button_focus.tres" type="StyleBox" id=2]
[ext_resource path="res://tscn/ui/button/button_default.tres" type="StyleBox" id=3]
[ext_resource path="res://tscn/ui/button/button_press.tres" type="StyleBox" id=4]
[ext_resource path="res://tscn/ui/button/button_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/font/smallest_16.tres" type="DynamicFont" id=6]
[ext_resource path="res://tscn/ui/set_page/set_page.tscn" type="PackedScene" id=7]
[ext_resource path="res://tscn/ui/start/world_page.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/start/demo.gd" type="Script" id=9]
[ext_resource path="res://scene/start/Camera.gd" type="Script" id=10]
[ext_resource path="res://scene/start/title.gd" type="Script" id=11]
[ext_resource path="res://assets/font/smallest_24.tres" type="DynamicFont" id=12]
[ext_resource path="res://tscn/audio/audio.tscn" type="PackedScene" id=13]
[ext_resource path="res://tscn/world/terrain6.tres" type="Material" id=14]
[ext_resource path="res://tscn/ui/start/net_page.tscn" type="PackedScene" id=15]
[ext_resource path="res://tscn/world/terrain1.tres" type="Material" id=16]
[ext_resource path="res://tscn/world/terrain4.tres" type="Material" id=17]
[ext_resource path="res://tscn/world/terrain7.tres" type="Material" id=18]
[ext_resource path="res://tscn/world/terrain0.tres" type="Material" id=19]
[ext_resource path="res://tscn/world/terrain2.tres" type="Material" id=20]
[ext_resource path="res://tscn/world/terrain3.tres" type="Material" id=21]
[ext_resource path="res://tscn/world/terrain5.tres" type="Material" id=22]

[sub_resource type="VoxelStreamRegionFiles" id=1]

[sub_resource type="VoxelGeneratorWaves" id=2]
channel = 0
height_start = 30.0
height_range = 50.0

[sub_resource type="Voxel" id=3]
voxel_name = "air"
transparent = true
transparency_index = 1

[sub_resource type="Voxel" id=4]
voxel_name = "solid"
geometry_type = 1
collision_aabbs = [ AABB( 0, 0, 0, 1, 1, 1 ) ]
cube_geometry/padding_y = null
cube_tiles/left = Vector2( 0, 0 )
cube_tiles/right = Vector2( 0, 0 )
cube_tiles/bottom = Vector2( 0, 0 )
cube_tiles/top = Vector2( 0, 0 )
cube_tiles/back = Vector2( 0, 0 )
cube_tiles/front = Vector2( 0, 0 )

[sub_resource type="VoxelLibrary" id=5]
voxels/0 = SubResource( 3 )
voxels/1 = SubResource( 4 )

[sub_resource type="VoxelMesherBlocky" id=6]
library = SubResource( 5 )

[sub_resource type="ProceduralSky" id=7]
radiance_size = 0
sky_top_color = Color( 0.933333, 0.905882, 0.768627, 1 )
sky_horizon_color = Color( 0.85098, 0.85098, 0.756863, 1 )
texture_size = 0

[sub_resource type="Environment" id=8]
background_mode = 3
background_sky = SubResource( 7 )
background_color = Color( 0.87451, 0.898039, 0.933333, 1 )
fog_enabled = true
fog_color = Color( 0.87451, 0.898039, 0.933333, 1 )
fog_sun_color = Color( 0.87451, 0.898039, 0.933333, 1 )
fog_depth_end = 40.0
fog_transmit_enabled = true
ssao_quality = 0
ssao_edge_sharpness = 0.0
dof_blur_far_distance = 100.0
dof_blur_far_transition = 0.01
dof_blur_far_quality = 0
adjustment_saturation = 2.0

[node name="start" type="Node2D"]
script = ExtResource( 1 )

[node name="audio" parent="." instance=ExtResource( 13 )]

[node name="title" type="Label" parent="."]
visible = false
margin_left = 213.0
margin_top = 43.0
margin_right = 798.0
margin_bottom = 225.0
custom_fonts/font = ExtResource( 12 )
text = "friends world"
align = 1
valign = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="single" type="Button" parent="."]
margin_left = 107.0
margin_top = 270.0
margin_right = 245.0
margin_bottom = 312.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "single_ui"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multiplayer" type="Button" parent="."]
margin_left = 107.0
margin_top = 346.0
margin_right = 245.0
margin_bottom = 388.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "multiplayer_ui"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="set" type="Button" parent="."]
margin_left = 106.0
margin_top = 422.0
margin_right = 245.0
margin_bottom = 464.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "option_ui"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="."]
margin_left = 106.0
margin_top = 488.0
margin_right = 245.0
margin_bottom = 530.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "exit_ui"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="world_page" parent="." instance=ExtResource( 8 )]
visible = false

[node name="net_page" parent="." instance=ExtResource( 15 )]
visible = false

[node name="set_page" parent="." instance=ExtResource( 7 )]
visible = false

[node name="demo" type="VoxelTerrain" parent="."]
stream = SubResource( 1 )
generator = SubResource( 2 )
mesher = SubResource( 6 )
generate_collisions = false
run_stream_in_editor = false
material/0 = ExtResource( 19 )
material/1 = ExtResource( 16 )
material/2 = ExtResource( 20 )
material/3 = ExtResource( 21 )
material/4 = ExtResource( 17 )
material/5 = ExtResource( 22 )
material/6 = ExtResource( 14 )
material/7 = ExtResource( 18 )
script = ExtResource( 9 )

[node name="VoxelViewer" type="VoxelViewer" parent="."]
transform = Transform( 1, 0, 0, 0, 0.907836, 0.419325, 0, -0.419325, 0.907836, 0, 10.2007, 0 )
view_distance = 144

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.642787, 0.766044, 0, -0.766044, 0.642787, 0, 80, 0 )
current = true
far = 200.0
script = ExtResource( 10 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.507207, 0.861824, 0, -0.861824, 0.507207, 0, 0, 0 )
visible = false
light_bake_mode = 0
shadow_enabled = true
directional_shadow_mode = 0
